# W8_Project

./: CMakeLists.txt  CubeSide.cpp  CubeSide.h  FidgetCube.cpp  FidgetCube.h  main.cpp  main2.cpp
